# wro-2026

./: .gitignore  build.sh  deploy.ps1  get_logs.py  plan.md  readme.md  wro2026.service
cpp/: CMakeLists.txt
cpp/include/: calculator.h  mpu6050.hpp  robot.hpp  stepper_motor.hpp
cpp/src/: calculator.cpp  mpu6050.cpp  robot.cpp  robot_c_api.cpp  stepper_motor.cpp
python/: brickpi3.py  cube_test.py  done.py  framecolors.py  lego_colors.json  main.py  my_color_sernsor.py  print_last_log.py  robot.py  servo_motors.py  task.py
